Fix alignments, font scaling, and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 }
 
 :root {
+  /* fluid font sizes */
+  --step--5: clamp(0.40rem, calc(0.37rem + 0.17vw), 0.49rem);
+  --step--4: clamp(0.48rem, calc(0.43rem + 0.26vw), 0.61rem);
   --step--3: clamp(0.58rem, calc(0.50rem + 0.37vw), 0.77rem);
   --step--2: clamp(0.69rem, calc(0.59rem + 0.52vw), 0.96rem);
   --step--1: clamp(0.83rem, calc(0.69rem + 0.72vw), 1.20rem);
@@ -14,19 +17,33 @@
   --step-3: clamp(1.73rem, calc(1.26rem + 2.35vw), 2.93rem);
   --step-4: clamp(2.07rem, calc(1.45rem + 3.10vw), 3.66rem);
   --step-5: clamp(2.49rem, calc(1.67rem + 4.08vw), 4.58rem);
+
+  /* fallback font */
+  --system-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 * {
     box-sizing: border-box;
-    /* border: 1px solid black; */
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--system-font);
+    background-image: url(/img/paige-cody--esAIGzeMqU-unsplash.jpg);
+    background-size: 100vw auto;
+    position: relative;
+    background-color: #fff5ef;
 }
 
-.background-img {
-    height: 65vmax;
+.header {
+    /* display: none; */
+    position: relative;
+    top: 5vh;
 }
 
 .logo {
@@ -35,11 +52,6 @@ body {
 }
 
 .logo-bg {
-    position: absolute;
-    top: 6vh;
-    bottom: 84vh;
-    left: 0;
-    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,18 +69,25 @@ body {
     position: absolute;
     background-color: #fff5ef;
     top: 40vh;
-    width: max(300px, 100vw);
     font-family: comfortaa;
+    width: max(300px, 100vw);
+    height: auto;
 }
 
 .main p {
     font-size: var(--step-0);
+    line-height: 1.3rem;
+    max-width: 60ch;
+}
+
+.info p {
+    padding-block: var(--step-1);
 }
 
 .main p,
 legend,
 label {
-    padding-inline: var(--step--1);
+    padding-inline: var(--step-0);
 }
 
 fieldset {
@@ -86,7 +105,7 @@ fieldset {
 
 legend {
     position: absolute;
-    top: 1.2rem;
+    top: var(--step-2);
     font-size: var(--step-0);
     font-weight: 500;
 }
@@ -100,21 +119,64 @@ label {
 }
 
 label[for='first_name'] {
-    margin-top: 48px;
+    margin-top: var(--step-5);
 }
 
 input {
     width: clamp(250px, 80%, 320px);
     font-size: var(--step-0);
-    margin-inline: var(--step--1);
-    padding-block: 6px;
+    margin-inline: var(--step-0);
+    padding-block: var(--step--5);
+    padding-inline: var(--step--4);
     border-radius: 4px;
     border: 1px solid rgb(179, 164, 151);
+    font-family: var(--system-font);
 }
 
 button {
-    margin-inline: var(--step--1);
+    margin-inline: var(--step-0);
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 12px 16px;
+    background-color: antiquewhite;
+    color: rgb(70, 50, 50);
+    border-radius: 3rem;
+    font-family: var(--system-font);
+    border: 1px solid rgb(70, 50, 50);;
+}
+
+@media (orientation: landscape) {
+
+    body {
+        background-size: 60vw auto;
+        background-repeat: no-repeat;
+    }
+    
+    .header {
+        position: fixed;
+        top: 25vh;
+        left: 0;
+        right: 40vw;
+    }
+    
+    .main {
+        top: 0;
+        left: 60vw;
+        width: 40vw;
+    }
+
+    .info p,
+    label,
+    legend {
+        padding-inline: var(--step-3);
+    }
+
+    input,
+    button {
+        margin-inline: var(--step-3);
+    }
+
+    .main {
+        padding-top: var(--step--1);
+    }
 }
